src/components/Card/Card.css
@import "~antd/dist/antd.css";

.card {
    background: var(--primarydark);
    border: transparent;
    border-radius: 10em 1em 1em 10em;
    padding: 0;
    position: relative;
    animation-name: appear;
    animation-duration: 1s;
}

@keyframes appear {
    0% {left: 1000px;}
    80% {left: -100px;}
    100% {left: 0px;}
}

.wrapper {
  display: flex;
  padding: 0;
}

.info {
  margin: 1em;
  display: flex;
  flex-direction: column;
  width: 70%;
}

.data {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 0.5em;
}

.info .name {
  font-weight: bold;
  margin-right: 1fr;
  font-size: 1.2em;
}

.ant-card-body {
  padding: 0;
}

.avatar {
  /* border: 5px solid rosybrown; */
  background: rgba(0,0,0,0.1);
  border: 3px solid var(--fancy);
}

